# python-app-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/bonjour/: __main__.py
tests/: test_main.py
