[project]
name = "bonjour"
version = ""
description = ""
authors = [{ name = "rami3l", email = "rami3l@outlook.com" }]
dependencies = [
    "more-itertools>=8.12.0",
]
requires-python = ">=3.9"
license = { text = "MIT" }
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["black>=22.3.0", "pytest>=7.1.1", "pydbg>=0.3.0", "mypy>=0.942"]

[tool.pdm.scripts]
main = "python -m bonjour"
test = "pytest tests/"
fmt = "black ."
