[project]
name = "bonjour"
version = "0.0.0"
description = ""
authors = [{ name = "rami3l", email = "rami3l@outlook.com" }]
dependencies = [
    "more-itertools>=8.12.0",
]
requires-python = ">=3.9"
license = { text = "MIT" }
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["black>=22.3.0", "pytest>=7.1.1", "pydbg>=0.3.0", "mypy>=0.942"]

[tool.pdm.scripts]
main = "python -m bonjour"
test = "pytest tests/"
fmt = "black ."

# Enable `console_scripts` to be visible to tools like `pipx`.
# See: https://pdm.fming.dev/latest/pyproject/pep621/#console-scripts
[project.scripts]
bonjour = "bonjour.__main__:main"

[tool.pyright]
reportUnknownArgumentType = "information"
reportUnknownLambdaType = "information"
reportUnknownMemberType = "information"
reportUnknownParameterType = "information"
reportUnknownVariableType = "information"
