[project]
name = "bonjour"
version = "0.0.0"
description = ""
authors = [{ name = "rami3l", email = "rami3l@outlook.com" }]
dependencies = ["more-itertools>=8.12.0"]
requires-python = ">=3.9"
license = { text = "MIT" }
[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[project.scripts]
bonjour = "bonjour.__main__:main"

[tool.flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
# See https://github.com/PyCQA/pycodestyle/issues/373
extend-ignore = "E203"

[tool.black]
# preview = true
skip_magic_trailing_comma = true

[tool.pyright]
reportUnknownArgumentType = "information"
reportUnknownLambdaType = "information"
reportUnknownMemberType = "information"
reportUnknownParameterType = "information"
reportUnknownVariableType = "information"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "pytest>=7.1.1",
    "pydbg>=0.3.0",
    "flake8-pyproject>=1.2.3",
]

[tool.pdm.scripts]
main = "python -m bonjour"
test = "pytest tests/"
fmt = "black ."

# Enable `console_scripts` to be visible to tools like `pipx`.
# See: https://pdm.fming.dev/latest/pyproject/pep621/#console-scripts
